--- a/about.html
+++ b/about.html
@@ -17,5 +17,7 @@
     </nav>
     <p>heyyy im raster<br><br>i do design, frontend, yapping, and a bit of animation
     <br><br>also feel free to look at my <a href="/work">work</a></p>
+    <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
 </body>
 </html>
