--- a/blog.html
+++ b/blog.html
@@ -16,5 +16,7 @@
     <a class="nav" href="/now">now</a>
     </nav>
     <p>nothing to see here (for now)</p>
+    <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
 </body>
 </html>
