--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,8 @@
     <a class="nav" href="/contact">contact</a>
     <a class="nav" href="/now">now</a>
     </nav>
-    say hi via <a href="mailto:heyraster@proton.me?subject=heyyyy&body=wsg">email</a>, or the form below
-    <form id="contact-form">
-    <label for="name">name/email/x handle</label><br>
-    <input type="text" id="name" name="name" required>
-    <label for="message">message</label>
-    <textarea id="message" name="message" required></textarea>
-    <button type="submit">submit</button>
+    <p><br>say hi via <a href="mailto:heyraster@proton.me?subject=heyyyy&body=wsg">email</a></p>
+    <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
 </body>
 </html>
