--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <a class="nav" href="/contact">contact</a>
     <a class="nav" href="/now">now</a>
     </nav>
+        <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
 </body>
 </html>
