--- a/now.html
+++ b/now.html
@@ -15,6 +15,8 @@
     <a class="nav" href="/contact">contact</a>
     <a class="nav" href="/now">now</a>
     </nav>
-    <p>thinking of doing a weekly stream<p
+    <p>thinking of doing a weekly stream</p>
+    <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
 </body>
 </html>
