--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <a class="nav" href="/contact">contact</a>
     <a class="nav" href="/now">now</a>
     </nav>
-    <p><br>say hi via <a href="mailto:heyraster@proton.me?subject=heyyyy&body=wsg">email</a></p>
+    <p>say hi via <a href="mailto:heyraster@proton.me?subject=heyyyy&body=wsg">email (press me)</a></p>
     <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
     <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
 </body>
