--- a/blog.html
+++ b/blog.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>(^_^)</title>
-    <link href="styles.css" rel="stylesheet"
+    <link href="styles.css" rel="stylesheet">
+    <script
+    src="https://cdn.databuddy.cc/databuddy.js"
+    data-client-id="f4982d81-d608-4a79-8ff3-85126bdbf47e"
+    crossorigin="anonymous"
+    async
+  ></script>
 </head>
 <body>
-    <nav>
-    <span class="disp">raster</span>
-    <a class="nav" href="/about">about</a>
-    <a class="nav" href="/work">work</a>
-    <a class="nav" href="/blog">blog</a>
-    <a class="nav" href="/contact">contact</a>
-    <a class="nav" href="/now">now</a>
-    </nav>
-    <p>nothing to see here (for now)</p>
-    <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
+    <img src="favicon.svg" width="40px" height="40px" href="/index.html">
+    <a class="back" href="/index.html"><- back<a>
+    <ul>
+    <li><a href="/posts/first-post.html">first post</a></li>
 </body>
 </html>
