--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>(^_^)</title>
-    <link href="styles.css" rel="stylesheet"
+    <link href="styles.css" rel="stylesheet">
+    <script
+    src="https://cdn.databuddy.cc/databuddy.js"
+    data-client-id="f4982d81-d608-4a79-8ff3-85126bdbf47e"
+    crossorigin="anonymous"
+    async
+  ></script>
 </head>
 <body>
-    <nav>
-    <span class="disp">raster</span>
-    <a class="nav" href="/about">about</a>
-    <a class="nav" href="/work">work</a>
-    <a class="nav" href="/blog">blog</a>
-    <a class="nav" href="/contact">contact</a>
-    <a class="nav" href="/now">now</a>
-    </nav>
-        <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
+    <img src="favicon.svg" width="40px" height="40px" href="/index.html">
+    <p>heyyy im <i>raster</i></p>
+    
+    <p>i do design, frontend, yapping, and a bit of animation</p>
+
+    <p>i enjoy playing minecraft, writing (basic) html, writing ideas (mostly abt software) 
+    and a bunch of other stuff i dont really remember</p>
+
+    <p>im currently working on aboring.page (coming soon)</p>
+    <p>also you should look at my <a href="/blog.html">blog</a></p>
 </body>
 </html>
