--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="favicon.svg" width="40px" height="40px" href="/index.html">
     <p>heyyy im <i>raster</i></p>
     
-    <p>i do design, frontend, yapping, and a bit of animation</p>
+    <p>i do design, html, yapping, and a bit of animation</p>
 
     <p>i enjoy playing minecraft, writing (basic) html, writing ideas (mostly abt software) 
     and a bunch of other stuff i dont really remember</p>
