Replace script and update HTML structure

--- a/index.html
+++ b/index.html
@@ -3,25 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>(^_^)</title>
     <link href="styles.css" rel="stylesheet">
     <script
-    src="https://cdn.databuddy.cc/databuddy.js"
-    data-client-id="f4982d81-d608-4a79-8ff3-85126bdbf47e"
-    crossorigin="anonymous"
-    async
-  ></script>
+  src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js"
+  type="module"
+   ></script>
 </head>
 <body>
-    <img src="favicon.svg" width="40px" height="40px" href="/index.html">
-    <p>heyyy im <i>raster</i></p>
-    
-    <p>i do design, html, yapping, and a bit of animation</p>
-
-    <p>i enjoy playing minecraft, writing (basic) html, writing ideas (mostly abt software) 
-    and a bunch of other stuff i dont really remember</p>
-
-    <p>im currently working on aboring.page (coming soon)</p>
-    <p>also you should look at my <a href="/blog.html">blog</a></p>
+<dotlottie-wc
+  src="https://lottie.host/e2b92097-9c2f-46ef-8677-cb99ed2948a0/5d2GmznL9o.lottie"
+  style="width: 300px;height: 300px"
+  autoplay
+  loop
+></dotlottie-wc>
 </body>
 </html>
