second first commit!

--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <script
-  src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js"
-  type="module"
-   ></script>
+    <script src="https://cdn.jsdelivr.net/gh/welpo/iine@main/iine.mini.js"></script>
 </head>
 <body>
-<dotlottie-wc
-  src="https://lottie.host/e2b92097-9c2f-46ef-8677-cb99ed2948a0/5d2GmznL9o.lottie"
-  style="width: 300px;height: 300px"
-  autoplay
-  loop
-></dotlottie-wc>
+    <p><span class="disp">raster</span><br>does stuff</p>
+        <p>i'm a filipino guy creating cool stuff because why not? also its kind of fun but anyway</p>
+        <p>i do <i>design, animation, html,</i> and hopefully soon, <i>javascript</i> (yeay)</p>
+        <p>i'm passionate about:<br>my faith!<br>human creativity!<br>well designed software!<br>hating on google and adobe!<br>foss!<br>good design!<br>waffles!<br>mozzarella!</p>
+        <p>you can contact me via <a href="mailto:heyraster@proton.me?subject=hey%20whats%20up">email</a> or my <a href="https://nav.atabook.org/">guestbook!</a></p>
+        <p class="disp">fun stuff!</p>
+            <button
+                class="iine-button"
+                data-icon="ppl who clicked this text:"
+                aria-hidden="true">
+            </button>
+        <p>saying of the day:<p>
+        <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=raster" defer></script>
 </body>
 </html>
