--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
                 data-icon="ppl who clicked this text:"
                 aria-hidden="true">
             </button>
+        <script
+            src="https://giscus.app/client.js"
+            data-repo="ilwidfr/ilwidfr.github.io"
+            data-repo-id="R_kgDOQ1FKQg"
+            data-category-id="DIC_kwDOQ1FKQs4C1e6c"
+            data-mapping="specific"
+            data-term="chat"
+            data-strict="0"
+            data-reactions-enabled="1"
+            data-emit-metadata="0"
+            data-input-position="bottom"
+            data-theme="light"
+            data-lang="en"
+            crossorigin="anonymous"
+            async>
+        </script>
         <p>saying of the day:<p>
         <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=raster" defer></script>
 </body>
