--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/gh/welpo/iine@main/iine.mini.js"></script>
+        <link
+            rel="stylesheet"
+            href="https://www.gabriel-export.earth/html-energy-webring/onionring/styles.css"
+        />
 </head>
 <body>
     <p><span class="disp">raster</span><br>does stuff</p>
@@ -19,7 +23,18 @@
                 aria-hidden="true">
             </button>
         <p>saying of the day:<p>
-        <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=raster" defer></script>
+        <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=raster" defer></script>    
+<div id="html-energy-webring">
+    <script
+        type="text/javascript"
+        src="https://www.gabriel-export.earth/html-energy-webring/onionring/variables.js"
+    ></script>
+    <script
+        type="text/javascript"
+        src="https://www.gabriel-export.earth/html-energy-webring/onionring/widget.js"
+    ></script>
+    <!-- 🔺 Order matters here! 🔺 -->
+</div>
         <script
             src="https://giscus.app/client.js"
             data-repo="ilwidfr/ilwidfr.github.io"
