--- a/index.html
+++ b/index.html
@@ -31,21 +31,20 @@
     ></script>
     <!-- 🔺 Order matters here! 🔺 -->
 </div>
-        <script
-            src="https://giscus.app/client.js"
-            data-repo="ilwidfr/ilwidfr.github.io"
-            data-repo-id="R_kgDOQ1FKQg"
-            data-category-id="DIC_kwDOQ1FKQs4C1e6c"
-            data-mapping="specific"
-            data-term="chat"
-            data-strict="0"
-            data-reactions-enabled="1"
-            data-emit-metadata="0"
-            data-input-position="bottom"
-            data-theme="light"
-            data-lang="en"
-            crossorigin="anonymous"
-            async>
-        </script>
+<script src="https://giscus.app/client.js"
+        data-repo="rdotsvg/rdotsvg.github.io"
+        data-repo-id="R_kgDOQ1FKQg"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOQ1FKQs4C1e6c"
+        data-mapping="title"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script>
 </body>
 </html>
