--- a/journal.html
+++ b/journal.html
@@ -7,9 +7,8 @@
 </head>
 <body>
 <p><a href="index.html"> back</a></p>
-<h1>journal</h1>
 <article>
-  <h2>2026-01-23</h2>
+  <span class="disp">i forgot the date</span>
   <p>is this thing on?</p>
 </article>
 </body>
