--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 data-icon="ppl who clicked this text:"
                 aria-hidden="true">
             </button>
-        <p>saying of the day:<p>
-        <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=raster" defer></script>    
+        
+        <div>saying of the day:<div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div></div><script src="https://status.cafe/current-status.js?name=raster" defer></script>    
 <div id="html-energy-webring">
     <script
         type="text/javascript"
