--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>i'm a filipino guy creating cool stuff because why not? also its kind of fun but anyway</p>
         <p>i do <i>design, animation, html,</i> and hopefully soon, <i>javascript</i> (yeay)</p>
         <p>i'm passionate about:<br>my faith!<br>human creativity!<br>well designed software!<br>hating on google and adobe!<br>foss!<br>good design!<br>waffles!<br>mozzarella!</p>
-        <p>you can contact me via <a href="mailto:heyraster@proton.me?subject=hey%20whats%20up">email</a> or my <a href="https://nav.atabook.org/">guestbook!</a></p>
+        <p>you can contact me via <a href="mailto:heyraster@proton.me?subject=hey%20whats%20up">email</a> or my <a href="https://nav.atabook.org/">guestbook!</a> feel free to ask me questions in my <a href="/q&a.html">q&a website.</a></a></p>
         <p class="disp">fun stuff!</p>
             <button
                 class="iine-button"
